--- a/index.html
+++ b/index.html
@@ -4,16 +4,153 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header>
-
+<body class="open-sans-normal">
+    <header class="headers secondary-bg">
+        <nav>
+           <H3 class="nav-title">Ma<span class="txt-primary">r</span>y</H3>
+            <ul>
+                <li><a class="dark-2" href="">Protfilio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+      <div class="banner">
+        <div class="banner-content">
+            <h4 class="banner-welcome dark-2">Hi, I  am</h4>
+            <h1 class="banner-title">Mary Hardy</h1>
+            <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+        </div>
+        <img class="banner-profile"  src="images/hardy.png" alt="">
+      </div>
     </header>
     <main>
-
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-common">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">name</p>
+                    <p class="item-desriptin">Mary Hardy`</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-desriptin">nazmilk@hgamil.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of Birth</p>
+                    <p class="item-desriptin">Dec 16, 2000</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-desriptin">Dhaka BD</p>
+                </div>
+            </div>
+        </section>
+        <!-- What i do part  -->
+         <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-desription text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            
+            </div>
+         </section>
+         <!-- Resume part start -->
+         <section class="resume">
+             <h3 class="section-title text-center">A summary of My Resume</h3>
+            <div class="resume-container">
+                <!-- .resume-column*2>h3.reume-colume-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-desription -->
+                <div class="resume-column">
+                    <h3 class="reume-colume-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-desriptioN">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-desriptioN">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-desriptioN">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="reume-colume-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-desriptioN">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                        <div class="experience-desriptioN">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">HTML Developer</h4>
+                        <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+                        <div class="experience-desriptioN">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center resume-cv">
+                <button class="btn-primary">Download CV</button>
+            </div>
+         </section>
     </main>
-    <footer>
-        
+    <footer class="secondary-bg">
+        <div class="footer-column">
+                <h3 class="section-title">Lets Connect</h3>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30 " rows="30" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+        </form>
+        </div>
     </footer>
 </body>
 </html>
