--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="open-sans-normal">
-    <header class="headers secondary-bg">
+    <header class="headers secondary-bg hide">
         <nav>
            <H3 class="nav-title">Ma<span class="txt-primary">r</span>y</H3>
             <ul>
